<resources>
    <string name="app_name">American Football</string>
    <string name="Team_A">Team A</string>
    <string name="Team_B">Team B</string>
    <string name="zero">0</string>
    <string name="AddSix">+6 Points</string>
    <string name="AddThree">+3 Points</string>
    <string name="AddTwo">+2 Points</string>
    <string name="AddOne">+1 Point</string>
    <string name="Reset">RESET</string>
</resources>
