<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.americanfootball.MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Team_A"
                android:textSize="16sp"
                android:padding="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#616161"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/team_a_score"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddSix"
                android:layout_margin="15dp"
                android:onClick="SixPoints"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddThree"
                android:layout_margin="15dp"
                android:onClick="ThreePoints"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddTwo"
                android:layout_margin="15dp"
                android:onClick="TwoPoints"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddOne"
                android:layout_margin="15dp"
                android:onClick="OnePoint"
                />
    </LinearLayout>
        <View
            android:layout_height="match_parent"
            android:layout_width="1dp"
            android:layout_marginTop="10dp"
            android:background="@android:color/darker_gray"/>
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context=".MainActivity">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Team_B"
                android:textSize="16sp"
                android:layout_gravity="center_horizontal"
                android:padding="8dp"
                android:fontFamily="sans-serif-medium"
                android:textColor="#616161"
                android:gravity="center_horizontal"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:id="@+id/team_b_score"
                android:layout_margin="10dp"
                android:textColor="#000000"
                android:textSize="56sp"
                android:fontFamily="sans-serif-light"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddSix"
                android:layout_margin="15dp"
                android:onClick="SixPointsB"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddThree"
                android:layout_margin="15dp"
                android:onClick="ThreePointsB"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddTwo"
                android:layout_margin="15dp"
                android:onClick="TwoPointsB"
                />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/AddOne"
                android:layout_margin="15dp"
                android:onClick="OnePointB"
                />
        </LinearLayout>
    </LinearLayout>
<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:text="@string/Reset"
    android:padding="20dp"
    android:layout_margin="15dp"
    android:onClick="Reset"
    android:layout_alignParentBottom="true"/>
</RelativeLayout>
